--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,10 @@ format:
   html:
     theme: cosmo
     css: styles.css
+    header-includes: |
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    mainfont: Inter
     toc: true
     toc-depth: 4
     grid:
