--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,10 +24,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{ secrets.HETZNER_S3_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.HETZNER_S3_SECRET_ACCESS_KEY}}
-          #aws_bucket: ${{ secrets.AWS_BUCKET }}
-          aws_bucket: ch-agi-geodaten-dev
-          source_dir: '_site'
+      - uses: Create s3 config file
+        run: |
+          echo -e "[default]\nendpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" > ~/.aws/config
+          echo -e "[default]\naws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}\naws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" > ~/.aws/credentials
+
+      - name: Debug 1
+        run: |
+          cat ~/.aws/config
+          cat ~/.aws/credentials
+
+        # with:
+        #   aws_key_id: ${{ secrets.HETZNER_S3_KEY_ID }}
+        #   aws_secret_access_key: ${{ secrets.HETZNER_S3_SECRET_ACCESS_KEY}}
+        #   #aws_bucket: ${{ secrets.AWS_BUCKET }}
+        #   aws_bucket: ch-agi-geodaten-dev
+        #   source_dir: '_site'
