--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Create s3 config file
         run: |
+          mkdir .aws
           echo -e "[default]\nendpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" > ~/.aws/config
           echo -e "[default]\naws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}\naws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" > ~/.aws/credentials
 
