--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,11 +24,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create s3 config file
+      - name: Create s3 config and credentials file
         run: |
           mkdir .aws
-          echo -e "[default]\nendpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" > ~/.aws/config
-          echo -e "[default]\naws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}\naws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" > ~/.aws/credentials
+          echo "[default]\nendpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" > ~/.aws/config
+          echo "[default]\naws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}\naws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" > ~/.aws/credentials
 
       - name: Debug 1
         run: |
