--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,13 +29,13 @@ jobs:
           mkdir ~/.aws/
           touch ~/.aws/config
           touch ~/.aws/credentials
-          echo "[default]\nendpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" > ~/.aws/config
+          echo "[default]" > ~/.aws/config
+          echo "endpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" >> ~/.aws/config
           echo "[default]\naws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}\naws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" > ~/.aws/credentials
 
       - name: Debug 1
         run: |
           cat ~/.aws/config
-          cat ~/.aws/credentials
 
         # with:
         #   aws_key_id: ${{ secrets.HETZNER_S3_KEY_ID }}
