--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Debug 2
         run: |
           aws s3 ls
-        with:
+        env:
           AWS_ACCESS_KEY_ID: ${{ secrets.HETZNER_S3_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.HETZNER_S3_SECRET_ACCESS_KEY}}
 
