--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,9 +44,8 @@ jobs:
         run: |
           aws s3 ls --region fsn1
 
-
       - name: Publish to S3
-        run: aws s3 cp reference.qmd s3://ch-agi-geodaten-dev/reference.qmd
+        run: aws s3 cp _site s3://ch-agi-geodaten-dev/V_X_Y_Z --recursive
 
         # with:
         #   aws_key_id: ${{ secrets.HETZNER_S3_KEY_ID }}
