--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Checkout GRETL repo 
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
         with:
           repository: sogis/gretl
           path: gretl
@@ -41,6 +41,7 @@ jobs:
 
 
 
+
       # - name: Set up Quarto
       #   uses: quarto-dev/quarto-actions/setup@v2
 
@@ -51,32 +52,25 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create s3 config and credentials file
-        run: |
-          mkdir ~/.aws/
-          touch ~/.aws/config
-          touch ~/.aws/credentials
-          echo "[default]" > ~/.aws/config
-          echo "endpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" >> ~/.aws/config
-          echo "[default]" > ~/.aws/credentials
-          echo "aws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}" >> ~/.aws/credentials
-          echo "aws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" >> ~/.aws/credentials
+      # - name: Create s3 config and credentials file
+      #   run: |
+      #     mkdir ~/.aws/
+      #     touch ~/.aws/config
+      #     touch ~/.aws/credentials
+      #     echo "[default]" > ~/.aws/config
+      #     echo "endpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" >> ~/.aws/config
+      #     echo "[default]" > ~/.aws/credentials
+      #     echo "aws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}" >> ~/.aws/credentials
+      #     echo "aws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" >> ~/.aws/credentials
 
-      - name: Debug 1
-        run: |
-          cat ~/.aws/config
-          cat ~/.aws/credentials
+      # - name: Debug 1
+      #   run: |
+      #     cat ~/.aws/config
+      #     cat ~/.aws/credentials
 
-      - name: Debug 2
-        run: |
-          aws s3 ls --region fsn1
+      # - name: Debug 2
+      #   run: |
+      #     aws s3 ls --region fsn1
 
-      - name: Publish to S3
-        run: aws s3 cp _site s3://ch-agi-geodaten-dev/Vx_y_z --recursive --region fsn1
-
-        # with:
-        #   aws_key_id: ${{ secrets.HETZNER_S3_KEY_ID }}
-        #   aws_secret_access_key: ${{ secrets.HETZNER_S3_SECRET_ACCESS_KEY}}
-        #   #aws_bucket: ${{ secrets.AWS_BUCKET }}
-        #   aws_bucket: ch-agi-geodaten-dev
-        #   source_dir: '_site'
+      # - name: Publish to S3
+      #   run: aws s3 cp _site s3://ch-agi-geodaten-dev/Vx_y_z --recursive --region fsn1
