--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,7 +28,7 @@ jobs:
           #ref: a5caad39483ee10f9aae5492a5946ca83193b1b7
           ref: ${{ github.event.inputs.version }}
 
-      - name: Debug 1
+      - name: Debug
         working-directory: gretl
         run: |
           pwd
@@ -40,7 +40,7 @@ jobs:
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
 
-      - name: Debug 2
+      - name: Debug
         run: |
           pwd
           ls -la _site
@@ -49,7 +49,7 @@ jobs:
         run: |
           zip -r ${{ github.event.inputs.commit }}.zip _site
 
-      - name: Debug 3
+      - name: Debug
         run: |
           ls -la
 
@@ -61,9 +61,6 @@ jobs:
       # - name: Display Commit SHA
       #   run: echo "The current commit SHA is ${{ env.COMMIT_SHA }}"
 
-
-
-
       # - name: Set up Quarto
       #   uses: quarto-dev/quarto-actions/setup@v2
 
@@ -74,25 +71,25 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Create s3 config and credentials file
-      #   run: |
-      #     mkdir ~/.aws/
-      #     touch ~/.aws/config
-      #     touch ~/.aws/credentials
-      #     echo "[default]" > ~/.aws/config
-      #     echo "endpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" >> ~/.aws/config
-      #     echo "[default]" > ~/.aws/credentials
-      #     echo "aws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}" >> ~/.aws/credentials
-      #     echo "aws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" >> ~/.aws/credentials
+      - name: Create s3 config and credentials file
+        run: |
+          mkdir ~/.aws/
+          touch ~/.aws/config
+          touch ~/.aws/credentials
+          echo "[default]" > ~/.aws/config
+          echo "endpoint_url = ${{secrets.HETZNER_S3_ENDPOINT_URL}}" >> ~/.aws/config
+          echo "[default]" > ~/.aws/credentials
+          echo "aws_access_key_id = ${{secrets.HETZNER_S3_KEY_ID}}" >> ~/.aws/credentials
+          echo "aws_secret_access_key = ${{secrets.HETZNER_S3_SECRET_ACCESS_KEY}}" >> ~/.aws/credentials
 
-      # - name: Debug 1
-      #   run: |
-      #     cat ~/.aws/config
-      #     cat ~/.aws/credentials
+      - name: Debug
+        run: |
+          cat ~/.aws/config
+          cat ~/.aws/credentials
 
-      # - name: Debug 2
-      #   run: |
-      #     aws s3 ls --region fsn1
+      - name: Debug
+        run: |
+          aws s3 ls --region fsn1
 
-      # - name: Publish to S3
-      #   run: aws s3 cp _site s3://ch-agi-geodaten-dev/Vx_y_z --recursive --region fsn1
+      - name: Publish to S3
+        run: aws s3 cp ${{ github.event.inputs.commit }}.zip s3://ch-agi-geodaten-dev/ --region fsn1
