--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,7 +8,7 @@ on:
   # push:
   #   branches: main
 
-name: Quarto Publish
+name: Publish GRETL documentation and website
 
 jobs:
   build-deploy:
