--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -79,7 +79,7 @@ jobs:
           ls -la
 
       - name: Render and Publish
-        if: ${{ github.event.inputs.commit == 'main'}}
+        if: ${{ github.event.inputs.commit == 'main' || github.event.inputs.commit == 'V3_1_ili2duckdb' }}
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
